all-yamls/ingress-resources/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /home
        pathType: Prefix
        backend:
          service:
            name: landing-page
            port:
              number: 80
      - path: /performance
        pathType: Prefix
        backend:
          service:
            name: performance-frontend
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: visualizer-frontend
            port:
              number: 80
